<resources>
    <string name="app_name">Beau4u</string>
    <string name="outfit">Outfit</string>
    <string name="fitness">Fitness</string>
    <string name="skincare">Skin Care</string>
    <string name="cosmetic">Cosmetic</string>

    <!--Lau Chih Kei!-->
    <string name="daily_task">Daily Tasks</string>
    <string name="diet">Diet</string>
    <string name="exercise">Exercise</string>
    <string name="done">Done</string>

    <string name="task1">Avoid sugary drinks and fruit juice</string>
    <string name="task2">Drink water a half hour before meals</string>
    <string name="task3">Eat your food slowly</string>
    <string name="task4">Weigh yourself every day</string>
    <string name="task5">Get a good night\'s sleep, every night</string>
    <string name="task6">Limit high fat, highly processed foods</string>
    <string name="task7">Ensure regular exercise every day</string>
    <string name="task8">Increase your baseline activity level</string>


    <string name="exercise_1">Walking Lunge</string>
    <string name="exercise_1_desc">Stand with feet hip-width apart. Step forward with right foot, bending both knees to 90 degrees.
        Drive through right heel to stand, while stepping left foot forward and dropping into a lunge on the left side.
        Continue walking forward, making sure back knee hovers just off the floor with each step.
        You can perform this move with body weight or holding two dumbbells or kettlebells for an added challenge.
        Do 10 to 15 reps per side.</string>


    <string name="exercise_2">Backward Lunge</string>
    <string name="exercise_2_desc">Stand with feet together.
        Step right leg back, lowering down so both knees form a 90-degree angle, with right knee hovering just above the floor.
        Drive through left heel to stand up to starting position. Repeat on left side.
        Continue alternating for 10 to 15 reps per side.</string>

    <string name="exercise_3">Air Squat</string>
    <string name="exercise_3_desc">Start standing with feet just wider than hip-width apart, toes pointed slightly out,
        clasp hands at chest for balance. Send hips back and bend at knees to lower down as far as possible with chest lifted.
        Press through heels back up to starting position. Repeat for 10 to 15 reps.</string>
    <string name="exercise_4">Shoulder Bridge</string>
    <string name="exercise_4_desc">Lie faceup, knees bent, feet planted on floor. Place arms down by sides.
        Contract glutes and lift hips toward ceiling as high as possible you draw hands together below.
        Lower back down and repeat for 10 to 15 reps.11 OF 30
    </string>

    <string name="exercise_15minutes">15 Minutes</string>
    <string name="exercise_30minutes">30 Minutes</string>
    <string name="exercise_45minutes">45 Minutes</string>
    <string name="exercise_60minutes">60 Minutes</string>

    <string name="start">Start</string>

    <!-- Dearest Kah Wai -->
    <string name="lip1Detail">
        Product Name: HOLD LIVE 501\n
        Color: Tea Brown\n\n
        Product Name: HOLD LIVE 502\n
        Color: Maple Leaf\n\n
        Product Name: HOLD LIVE 503\n
        Color: Tomato Leaf\n\n
        Product Name: HOLD LIVE 504\n
        Color: Fancy Ruby\n\n
        Product Name: HOLD LIVE 505\n
        Color: Choco Jam\n\n
        Benefit of product :\n
        - Rich and Pigmented\n
        - Long-lasting\n
        - Lightweight
    </string>
    <string name="eye">Eyes</string>
    <string name="lip">Lips</string>
    <string name="foundation">Foundation</string>
    <string name="eye1Detail">
        Perfect Diary x British Museum\n
        *Fantasias Eye Shadow Palette*\n\n

        1. Cupid of Love \n
        2. Maria \n\n

        Buy now at official website : www.perfectdiary.com\n
        at $ 49.40.

    </string>

    <string name="foundationDetail">
        Beauty Moisturizing Whitening\n
        Concealer Liquid Foundation Makeup Cosmetic\n\n

        Product Features:\n
        1. Block defect whitening\n
        2. Lasting moisture\n
        3. Oil-control waterproof makeup\n\n
    </string>

    <!-- Yap Hui Wen-->
    <string name="casual">Casual</string>
    <string name="dating">Dating</string>
    <string name="formal">Formal</string>
    <string name="dinner">Dinner</string>
    <string name="casualLongDesc">Long Skirt</string>
    <string name="casualShortDesc">Short Skirt</string>
    <string name="casualDesc">The OOTD of youngs.\n
    Please scroll left to view more casual outfit...</string>
    <string name="datingDesc">The OOTD of youngs.\n
    Please scroll left to view more dating outfit...</string>
    <string name="dinnerDesc">The OOTD of youngs.\n
    Please scroll left to view more dinner outfit...</string>
    <string name="formalDesc">The OOTD of youngs.\n
    Please scroll left to view more formal outfit...</string>
    <string name="title_activity_tabbed_slim">TabbedSlim</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear All</string>

</resources>
